changed $content_width to max-height/width:auto css rule

--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ body{
 	clear: both;
 	padding: 0;
 	margin: 0 30px;
+	max-width: auto;
+	max-height: auto;
 }
 /* @group htags */
 h1,h2,h3,h4,h5,h6,form,fieldset{
